--- a/movie_rec.ipynb
+++ b/movie_rec.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing movie_rec.py\n"
+      "Overwriting movie_rec.py\n"
      ]
     }
    ],
@@ -22,6 +22,11 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "movies = pd.read_csv('movies.csv')\n",
+    "\n",
+    "movies['name'] = movies['title'].str.extract(r'^(.*)\\s\\(\\d{4}\\)$')  \n",
+    "movies['year'] = movies['title'].str.extract(r'\\((\\d{4})\\)$')        \n",
+    "\n",
+    "movies['title'] = movies['name']\n",
     "\n",
     "encoder = OneHotEncoder()\n",
     "genres_encoded = encoder.fit_transform(movies[['genres']]).toarray()\n",
@@ -45,19 +50,19 @@
     "        for rec in recommendations:\n",
     "            st.write(f'- {rec}')\n",
     "    else:\n",
-    "        st.write('Movie not found. Please try another title.')"
+    "        st.write('Movie not found. Please try another title.')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing requirements.txt\n"
+      "Overwriting requirements.txt\n"
      ]
     }
    ],
@@ -70,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Dockerfile\n"
+      "Overwriting Dockerfile\n"
      ]
     }
    ],
@@ -111,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
