--- a/movie_rec.ipynb
+++ b/movie_rec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
     "COPY . .\n",
     "EXPOSE 8501\n",
     "\n",
-    "CMD [\"streamlit\", \"run\", \"movie.py\", \"--server.port=8501\",\"--server.address=0.0.0.0\"]"
+    "CMD [\"streamlit\", \"run\", \"movie_rec.py\", \"--server.port=8501\",\"--server.address=0.0.0.0\"]"
    ]
   }
  ],
