--- a/movie_rec.ipynb
+++ b/movie_rec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
     "%%writefile movie_rec.py\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import streamlit as st\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
@@ -25,17 +26,16 @@
     "\n",
     "movies['name'] = movies['title'].str.extract(r'^(.*)\\s\\(\\d{4}\\)$')  \n",
     "movies['year'] = movies['title'].str.extract(r'\\((\\d{4})\\)$')        \n",
-    "\n",
-    "movies['title'] = movies['name']\n",
+    "movies['title'] = movies['name']  \n",
     "\n",
     "encoder = OneHotEncoder()\n",
     "genres_encoded = encoder.fit_transform(movies[['genres']]).toarray()\n",
     "\n",
-    "movies['features'] = list(genres_encoded)\n",
+    "movies_features = genres_encoded\n",
     "\n",
     "def recommend_movies(movie_name, k=4):\n",
     "    movie_index = movies[movies['title'] == movie_name].index[0]\n",
-    "    similarities = cosine_similarity([movies['features'][movie_index]], movies['features'])\n",
+    "    similarities = cosine_similarity([movies_features[movie_index]], movies_features)\n",
     "    similar_indices = similarities.argsort()[0][-k-1:-1][::-1]\n",
     "    recommendations = movies.iloc[similar_indices]['title'].tolist()\n",
     "    return recommendations\n",
